--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,9 +3,9 @@ FROM gcr.io/swift-tensorflow/base-deps-cuda10.2-cudnn7-ubuntu18.04
 # Allows the caller to specify the toolchain to use.
 ARG swift_tf_url=https://storage.googleapis.com/swift-tensorflow-artifacts/nightlies/latest/swift-tensorflow-DEVELOPMENT-cuda10.2-cudnn7-ubuntu18.04.tar.gz
 
-# Upgrade pips
-RUN pip2 install --upgrade pip
-RUN pip3 install --upgrade pip
+# Upgrade pip
+RUN pip3 install --upgrade pip && \
+    pip3 install wheel
 
 # Install swift-jupyter's dependencies in python3 because we run the kernel in python3.
 WORKDIR /swift-jupyter
@@ -13,8 +13,7 @@ COPY docker/requirements*.txt ./
 RUN pip3 install -r requirements.txt
 
 # Install some python libraries that are useful to call from swift. Since
-# swift can interoperate with python2 and python3, install them in both.
-RUN pip2 install -r requirements_py_graphics.txt
+# swift can interoperate with python3.
 RUN pip3 install -r requirements_py_graphics.txt
 
 # Copy the kernel into the container
@@ -30,8 +29,7 @@ RUN mkdir usr \
 
 # Register the kernel with jupyter
 WORKDIR /swift-jupyter
-RUN python3 register.py --user --swift-toolchain /swift-tensorflow-toolchain --swift-python-version 2.7 --kernel-name "Swift (with Python 2.7)" && \
-    python3 register.py --user --swift-toolchain /swift-tensorflow-toolchain --swift-python-library /usr/lib/x86_64-linux-gnu/libpython3.6m.so --kernel-name "Swift"
+RUN python3 register.py --user --swift-toolchain /swift-tensorflow-toolchain --swift-python-library /usr/lib/x86_64-linux-gnu/libpython3.6m.so --kernel-name "Swift"
 
 # Configure cuda
 RUN echo "/usr/local/cuda-10.0/targets/x86_64-linux/lib/stubs" > /etc/ld.so.conf.d/cuda-10.0-stubs.conf && \
