--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -41,6 +41,9 @@ RUN echo "/usr/local/cuda-10.0/targets/x86_64-linux/lib/stubs" > /etc/ld.so.conf
 # Add Swift to the PATH
 ENV PATH="$PATH:/swift-tensorflow-toolchain/usr/bin/"
 
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    tmux mc glances
+
 # Run jupyter on startup
 EXPOSE 8888
 RUN mkdir /notebooks
