--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -42,7 +42,7 @@ RUN echo "/usr/local/cuda-10.0/targets/x86_64-linux/lib/stubs" > /etc/ld.so.conf
 ENV PATH="$PATH:/swift-tensorflow-toolchain/usr/bin/"
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    tmux mc glances
+    openssh-client tmux mc glances
 
 # Run jupyter on startup
 EXPOSE 8888
